<resources>
    <string name="app_name">HFAD05UserInterface</string>
    <string name="buttonText">Send</string>
    <string name="button_above">Below</string>
    <string name="sendButtonText">Send</string>
    <string name="to_hint">To</string>
    <string name="message_hint">Message</string>
    <string name="textViewText">This is a text view</string>
    <string name="editTextHint">Enter email here</string>
    <string name="toggle_button_text_on">On</string>
    <string name="toggle_button_text_off">Off</string>
    <string name="astronauts">Astronauts</string>
    <string name="cavemen">Cavemen</string>
    <string name="starbuzz_logo">https://tinyurl.com/HeadFirstAndroid</string>
    <string name="tea_button_text">Tea</string>
    <string name="temperature_text">Temperature</string>
    <string name="propose_tea_text">Thanks for choosing our blend tea. How do you want it serving?</string>
    <string name="milk_text">Milk</string>
    <string name="sugar_text">Sugar</string>
    <string name="lemon_text">Lemon</string>
    <string name="temperature_hot_toggle_button">Hot</string>
    <string name="temperature_cold_toggle_button">Cold</string>
</resources>