<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeTeaActivity">

    <TextView
        android:id="@+id/propose_tea_text_view"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/propose_tea_text"/>

    <TextView
        android:id="@+id/temperature_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_text"
        android:textSize="24sp"
        android:layout_below="@+id/propose_tea_text_view"
        android:layout_marginTop="7.5dp"/>

    <ToggleButton
        android:id="@+id/temperature_toggle_button"
        android:layout_width="wrap_content"
        android:textOff="@string/temperature_hot_toggle_button"
        android:textOn="@string/temperature_cold_toggle_button"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/temperature_text_view"
        android:layout_toRightOf="@+id/temperature_text_view"
        android:layout_below="@+id/propose_tea_text_view"/>.

    <CheckBox
        android:id="@+id/milk_check_box"
        android:text="@string/milk_text"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperature_toggle_button"/>

    <CheckBox
        android:id="@+id/sugar_check_box"
        android:text="@string/sugar_text"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/milk_check_box"/>

    <CheckBox
        android:id="@+id/lemon_check_box"
        android:text="@string/lemon_text"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sugar_check_box"/>

</RelativeLayout>