<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinearLayoutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/to_hint"
            android:inputType="text"
            android:autofillHints="emailAddress"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/message_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:gravity="top"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendButtonText"
            android:layout_gravity="end"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/to_hint"
            android:inputType="text"
            android:autofillHints="emailAddress"
            android:layout_weight="0.25"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:hint="@string/message_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:gravity="top"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendButtonText"
            android:layout_gravity="bottom"/>

    </LinearLayout>
</LinearLayout>
